Fix content alignment issue in feature grid.

--- a/app/styles/utilities/_layout.scss
+++ b/app/styles/utilities/_layout.scss
@@ -10,3 +10,11 @@ header.global-header{
 main[role="main"]{
   flex: 1 1 auto;
 }
+
+.pos-a {
+  position: absolute;
+}
+
+.pos-r {
+  position: relative;
+}
